# burn-to-vote

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  output.txt  package.json  voting_logs.txt
circuits/: auction.circom  burnAddress.circom  keccak.circom  merkleTree.circom  mpt.circom  nullifier.circom  rlp.circom  utils.circom  vote.circom
contracts/: .gitignore  foundry.toml  remappings.txt
contracts/script/: AuctionErc20.s.sol  Voting.s.sol
contracts/src/: Auction.sol  AuctionErc20.sol  Errors.sol  Factory.sol  Voting.sol  VotingFactory.sol  verifier.sol
contracts/test/: Voting.t.sol
data/: abi.json  token_abi.json  vote_proof.json  vote_public.json  whitelist.json
inputs/: burn_address.json
offchain-tally/: run_benchmarks.sh
offchain-tally/recursion/circuits/inner/src/: main.nr
offchain-tally/recursion/circuits/recursive/: Prover.toml  Prover16.toml  Prover32.toml  Prover64.toml  Prover8.toml
offchain-tally/recursion/circuits/recursive/src/: main.nr  merkle_tools.nr
offchain-tally/recursion/js/: generate-proof.ts  input.toml  package.json
scripts/: spit_output.py
src/: main.rs
src/circuits/: bid_c.rs  burn_address.rs  burn_address_c.rs  merkle_tree.rs  merkle_tree_c.rs  mod.rs  mpt_c.rs  nullifier.rs  nullifier_c.rs  vote_c.rs
src/commands/: bid.rs  burn.rs  burn_address.rs  demo.rs  merkle_tree.rs  mod.rs  nullifier.rs  onchain_demo.rs  tally.rs  utils.rs  verify.rs  vote.rs
src/db/: ceremony.rs  mod.rs  voter.rs
src/utils/: account.rs  config.rs  mod.rs  mt.rs  proof.rs
